Sugati/src/objects/Calculation_Variables__c.object
<CustomObject>
    <fields>
        <fullName>CV_APC_Charges__c</fullName>
        <label>APC Charges</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Arrival_Presents__c</fullName>
        <label>Arrival Presents</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Booking_From__c</fullName>
        <label>Booking From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CV_Booking_To__c</fullName>
        <label>Booking To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CV_Charity__c</fullName>
        <label>Charity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CV_Transfer_Charges__c</fullName>
        <label>Transfer Charges</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Calculation Variables</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Calculation Variables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>